# jthon

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
Examples/advanced/: AdvancedExample.py  EarthquakeExample.json
Examples/basic/: dict_list_example  example.py  test_file.json
jthon/: __init__.py  errors.py  found.py  jthon.py
