[tool.poetry]
name = "jthon"
version = "1.0.5"
license = "MIT"
readme = "README.rst"
repository = "https://github.com/CasuallyCalm/jthon"
description = "A JSON helper for Python"
authors = ["CasuallyCalm <29642143+CasuallyCalm@users.noreply.github.com>", "ProbsJustin <jmksobieski@gmail.com>"]

classifiers=[
        'License :: OSI Approved :: MIT License',
        'Intended Audience :: Developers',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Utilities',
    ]


[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
